fix(components): avoid to cut off the axis labels

--- a/src/scss/components/Dashboard/_dashboard.scss
+++ b/src/scss/components/Dashboard/_dashboard.scss
@@ -214,6 +214,9 @@ $breakpoint-mobile: 600px;
   @media (max-width: $breakpoint-mobile) {
     box-shadow: none !important;
   }
+  & .recharts-surface {
+    overflow: visible;
+  }
 }
 
 .hide-bars-container {
